<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/pauseMenuItem"
        android:title="@string/pause_item_title"
        android:icon="@drawable/ic_media_pause"
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/refreshMenuItem"
        android:title="@string/refresh_item_title"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/updateMenuItem"
        android:title="@string/update_item_title"
        android:icon="@drawable/ic_menu_upload"
        android:showAsAction="ifRoom" />
    
<!--     <item -->
<!--         android:id="@+id/editMenuItem" -->
<!--         android:title="@string/edit_item_title" -->
<!--         android:icon="@drawable/ic_menu_manage" -->
<!--         android:showAsAction="always|withText" /> -->

</menu>